[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://backgrounds/backgrounds.png" type="Texture" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/chicken.png" type="Texture" id=5]
[ext_resource path="res://entities/Seedificator.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/Gieter.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/Mower.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/MoneyPrinter.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 110 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 180, 10 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 161, -59, 0, 0, 0, 0, -63, -30, 0, 0, 0, 0, -82, 119, 0, 0, 0, 0, -22, 274, 0, 0, 0, 0, 132, 318, 0, 0, 0, 0, 355, 291, 0, 0, 0, 0, 430, 153, 0, 0, 0, 0, 409, -3, 0, 0, 0, 0, 268, -82, 0, 0, 0, 0, 161, -59 )
}

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 152, 103 )
z_index = 1
collision_layer = 0
collision_mask = 3

[node name="Walls" type="StaticBody2D" parent="." groups=[
"Wall",
]]
collision_layer = 2
collision_mask = 2147483648
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2( -10, 90 )
shape = SubResource( 1 )

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2( 330, 90 )
shape = SubResource( 1 )

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2( 160, 10 )
shape = SubResource( 2 )

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( 160, 190 )
shape = SubResource( 2 )

[node name="Deco" type="Node" parent="."]

[node name="chicken" type="Sprite" parent="Deco"]
visible = false
position = Vector2( 275, 134 )
texture = ExtResource( 5 )

[node name="chicken2" type="Sprite" parent="Deco"]
visible = false
position = Vector2( 68, 101 )
texture = ExtResource( 5 )
flip_h = true

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="MonthTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="Seedificator" parent="." instance=ExtResource( 6 )]
position = Vector2( 225, 140 )

[node name="Gieter" parent="." groups=[
"Throwables",
] instance=ExtResource( 7 )]
position = Vector2( 53, 145 )

[node name="Mower" parent="." instance=ExtResource( 8 )]
position = Vector2( 253, 47 )

[node name="MoneyPrinter" parent="." instance=ExtResource( 9 )]
position = Vector2( 62, 93 )

[node name="StonkUpdateTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ChickenSpawn" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="ChickenSpawnSampler" type="PathFollow2D" parent="ChickenSpawn"]
position = Vector2( 161, -59 )
rotation = 3.01285

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 100 )
z_index = -1
texture = ExtResource( 3 )
vframes = 3
frame = 2

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 6.25
one_shot = true
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="throw" from="Player" to="." method="_on_Player_throw"]
[connection signal="timeout" from="MonthTimer" to="." method="_on_MonthTimer_timeout"]
[connection signal="consume" from="Seedificator" to="." method="_on_Seedificator_consume"]
[connection signal="kill" from="Mower" to="." method="_on_Mower_kill"]
[connection signal="consume" from="MoneyPrinter" to="." method="_on_MoneyPrinter_consume"]
[connection signal="timeout" from="StonkUpdateTimer" to="." method="_on_StonkUpdateTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="next_wave"]
